--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,42 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import Badge from "../components/Badge.astro";
+import LinkedInIcon from "../components/icons/LinkedInIcon.astro";
+import SocialPill from "../components/SocialPill.astro";
+import GitHubIcon from "../components/icons/GitHubIcon.astro";
+import MailIcon from "../components/icons/MailIcon.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Portfolio</h1>
-	</main>
+<Layout
+  title="SergioTech's Portfolio - Full Stack Web Developer with 4+ years of experience"
+>
+  <main>
+    <section class="w-full lg:w-[740px] mx-auto py-44">
+      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-4">
+        Hey, I'm SergioTech <a
+          href="https://linkedin.com/in/sergioherrerasaavedra"
+          target="_blank"
+          rel="noopener"
+          class="flex justify-center items-center"
+          ><Badge>Available for work</Badge></a
+        >
+      </h1>
+      <h2 class="text-2xl opacity-80">
+        Full Stack Developer with more than 4 years of experience. From Lima,
+        Peru. Specialised in Shopify Development
+      </h2>
+      <nav class="flex gap-x-4 mt-8">
+        <SocialPill href="https://linkedin.com/in/sergioherrerasaavedra">
+          <LinkedInIcon class="w-6 h-6" /> LinkedIn
+        </SocialPill>
+        <SocialPill href="https://github.com/sergiotech-la">
+          <GitHubIcon class="w-6 h-6" /> Github
+        </SocialPill>
+        <SocialPill href="mailto:sergio@sergio-tech.com">
+          <MailIcon class="w-6 h-6" /> sergio@sergio-tech.com
+        </SocialPill>
+      </nav>
+    </section>
+  </main>
 </Layout>
