Finished first version

--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -2,6 +2,6 @@
 const { class: className, id: id } = Astro.props;
 ---
 
-<section id={id} class={`w-full lg:w-[740px] mx-auto ${className}`}>
+<section id={id} class={`px-8 w-full lg:w-[740px] mx-auto ${className}`}>
   <slot />
 </section>
