--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,14 +9,20 @@ import MailIcon from "../components/icons/MailIcon.astro";
 import Experience from "../components/Experience.astro";
 import Container from "../components/Container.astro";
 import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
+import CodeIcon from "../components/icons/CodeIcon.astro";
+import Projects from "../components/Projects.astro";
+import UserIcon from "../components/icons/UserIcon.astro";
+import Description from "../components/Description.astro";
 ---
 
 <Layout
   title="SergioTech's Portfolio - Full Stack Web Developer with 4+ years of experience"
 >
   <main>
-    <Container class="py-40 pb-20">
-      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-4">
+    <Container class="py-40 pb-20" id="#top">
+      <h1
+        class="text-black dark:text-white text-5xl font-bold flex flex-row gap-x-4 pb-4"
+      >
         Hey, I'm SergioTech <a
           href="https://linkedin.com/in/sergioherrerasaavedra"
           target="_blank"
@@ -29,7 +35,9 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
         Full Stack Developer with more than 4 years of experience. From Lima,
         Peru. Specialised in Shopify Development
       </h2>
-      <nav class="flex gap-x-4 mt-8">
+      <nav
+        class="flex gap-x-4 mt-8 flex-wrap gap-y-4 items-center justify-center md:items-start md:justify-start"
+      >
         <SocialPill href="https://linkedin.com/in/sergioherrerasaavedra">
           <LinkedInIcon class="w-6 h-6" /> LinkedIn
         </SocialPill>
@@ -41,12 +49,26 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
         </SocialPill>
       </nav>
     </Container>
-    <Container>
+    <Container id="experience">
       <h2 class="text-3xl font-bold mb-6 flex gap-x-3 items-center">
         <BriefcaseIcon class="size-7" />
         Professional Experience
       </h2>
       <Experience />
+    </Container>
+    <Container id="projects">
+      <h2 class="text-3xl pt-16 font-bold mb-6 flex gap-x-3 items-center">
+        <CodeIcon class="size-7" />
+        Custom Shopify Features
+      </h2>
+      <Projects />
+    </Container>
+    <Container id="about" class="mt-10">
+      <h2 class="text-3xl font-bold mb-6 flex gap-x-3 items-center">
+        <UserIcon class="size-7" />
+        About me
+      </h2>
+      <Description />
     </Container>
   </main>
 </Layout>
