--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,25 @@
-<header class="flex justify-between items-center py-3 w-[1120px] mx-auto">
-    <img class="rounded-full w-12 h-12" src="https://avatars.githubusercontent.com/u/107273488?v=4" alt="sergiotech avatar"/>
+---
+import LogoIcon from "./icons/LogoIcon.astro";
+---
 
-    <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/projects">Projects</a>
-        <a href="/contact">Contact</a>
-    </nav>
+<header
+  class="bg-gray-50 z-50 flex sticky top-0 h-10 justify-center md:justify-between items-center py-6 px-8 w-full xl:w-[1120px] mx-auto"
+>
+  <a
+    href="https://sergio-tech.com/"
+    class="hidden md:flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse text-black"
+  >
+    <LogoIcon class="size-8" alt="SergioTech Isotype" />
+    <span
+      class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+      >SergioTech</span
+    >
+  </a>
+
+  <nav class="flex flex-row gap-x-10 opacity-80">
+    <a href="#top">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="mailto:sergio@sergio-tech.com">Contact</a>
+  </nav>
 </header>
