--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -1,5 +1,5 @@
 <a
-  class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/5 hover:bg-white/20 hover:scale-110 transition"
+  class="rounded-full border border-black/20 flex justify-center items-center gap-x-2 py-2 px-4 bg-white/20 dark:border-white/10 dark:bg-white/5 dark:hover:bg-white/20 hover:bg-white/100 hover:scale-110 transition"
   href={Astro.props.href}
   target="_blank"
   rel="noopener noreferrer"
