--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import "@fontsource-variable/onest";
 interface Props {
@@ -20,11 +21,12 @@ const { title } = Astro.props;
   </head>
   <body>
     <div
-      class="absolute top-0 z-[-2] h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"
+      class="absolute top-0 z-[-2] h-screen w-screen bg-gray-50 bg-[radial-gradient(#f8f8f833_1px,#ffffff33_1px)] dark:bg-[#000000] dark:bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"
     >
     </div>
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
 <style is:global>
@@ -35,10 +37,6 @@ const { title } = Astro.props;
     font-family: "Onest Variable", system-ui, sans-serif;
   }
   body {
-    color: #fff;
-    background-color: #050505;
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
     scroll-behavior: smooth;
   }
