--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import LogoIcon from "./icons/LogoIcon.astro";
 ---
 
 <footer
-  class="bg-white rounded-lg shadow dark:bg-gray-900 m-4 w-full xl:w-[1120px] mx-auto"
+  class="bg-gray-50 rounded-lg shadow dark:bg-gray-900 m-4 w-full xl:w-[1120px] mx-auto"
 >
   <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
     <div class="sm:flex sm:items-center sm:justify-between">
