--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,11 +19,9 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <div
-      class="absolute top-0 z-[-2] h-screen w-screen bg-gray-50 bg-[radial-gradient(#f8f8f833_1px,#ffffff33_1px)] dark:bg-[#000000] dark:bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"
-    >
-    </div>
+  <body
+    class="bg-gray-50 bg-[radial-gradient(#f8f8f833_1px,#ffffff33_1px)] dark:bg-[#000000] dark:bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"
+  >
     <Header />
     <slot />
     <Footer />
