--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import Description from "../components/Description.astro";
           ><Badge>Available for work</Badge></a
         >
       </h1>
-      <h2 class="text-2xl opacity-80">
+      <h2 class="text-black text-2xl opacity-80">
         Full Stack Developer with more than 4 years of experience. From Lima,
         Peru. Specialised in Shopify Development
       </h2>
