fix image route

--- a/src/components/Description.astro
+++ b/src/components/Description.astro
@@ -14,7 +14,7 @@
   </p>
   <img
     class="rounded-full size-60 mt-8 mb-8"
-    src="/public/sergio-herrera.webp"
+    src="/sergio-herrera.webp"
     alt="Photo of SergioTech, Full Stack Developer"
   />
 </article>
