Update title and description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ import Description from "../components/Description.astro";
 ---
 
 <Layout
-  title="SergioTech's Portfolio - Full Stack Web Developer with 4+ years of experience"
-  description="Welcome to SergioTech's Full Stack Development Portfolio. With over two years of experience in dynamic start-up environments, I specialize in delivering comprehensive web solutions."
+  title="SergioTech's Portfolio - Full Stack Web Developer"
+  description="Welcome to SergioTech's Full Stack Development Portfolio. I specialize in delivering comprehensive web solutions."
 >
   <main>
     <Container class="py-40 pb-20" id="#top">
